# mathOrgConvert

./: mathOrgMD.cabal
app/: Main.hs
example-files/: amgm.tex  amgm.txt  functional_equations.tex  functional_equations.txt
src/: Converter.hs
